Bug 13620 - acpi_enforce_resources broken - conflicting i2c module loaded on some EeePCs
Summary: acpi_enforce_resources broken - conflicting i2c module loaded on some EeePCs
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Lin Ming
URL:
Keywords:
Depends on:
Blocks: 13070
  Show dependency tree
 
Reported: 2009-06-25 08:31 UTC by Alan Jenkins
Modified: 2009-08-21 16:42 UTC (History)
8 users (show)

See Also:
Kernel Version: Debian 2.6.30-1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
2.6.30 dmesg: i2c_i801 loads, causes 15 second delay in eeepc-laptop (86.27 KB, text/plain)
2009-06-25 08:31 UTC, Alan Jenkins
Details
2.6.30 dmesg: i2c_i801 loads, causes 15 second delay in eeepc-laptop (36.12 KB, text/plain)
2009-06-25 08:41 UTC, Alan Jenkins
Details
lspci -vxxx of impacted computer (22.44 KB, text/x-log)
2009-06-26 07:40 UTC, fboiteux
Details
acpidump log (105.34 KB, text/x-log)
2009-06-26 07:41 UTC, fboiteux
Details
dmesg output for Debian's 2.6.29-2-686 kernel, with acpi_enforce_resources=strict in command line (37.88 KB, text/x-log)
2009-06-26 07:43 UTC, fboiteux
Details

Description Alan Jenkins 2009-06-25 08:31:41 UTC
Created attachment 22090 [details]
2.6.30 dmesg: i2c_i801 loads, causes 15 second delay in eeepc-laptop

This was raised when eeepc-laptop was reported to cause ~15 second delays on bootup.  We saw it before in Bug 12376.  The cause is that i2c_i801 binds to hardware which is also driven by the ACPI BIOS.  Blacklisting i2c_i801 fixes it.

In debian 2.6.29-something, "acpi_enforce_resources=strict" fixes the problem by reserving the resources used by ACPI, so i2c_i801 can't bind.

2.6.30 should fix it because "strict" is now the default.  But it doesn't work; i2c_i801 is loaded even if the "strict" boot option is set.  This is a regression.

References: <http://lists.alioth.debian.org/pipermail/debian-eeepc-devel/2009-June/002316.html>
Comment 1 Alan Jenkins 2009-06-25 08:41:03 UTC
Created attachment 22091 [details]
2.6.30 dmesg: i2c_i801 loads, causes 15 second delay in eeepc-laptop

Dmesg from a slightly different system with the same problem.  This one is easier to read - the first one was spammed by initcall_debug.
Comment 2 ykzhao 2009-06-26 00:43:00 UTC
Hi, Alan
   Will you please attach the output of acpidump, lspci -vxxx?
   Thanks.
Comment 3 fboiteux 2009-06-26 07:40:05 UTC
Created attachment 22099 [details]
lspci -vxxx of impacted computer

Here is the lspci log of a computer impacted by this bug, an Asus eeepc 1002HA (submit requested by Alan).
Comment 4 fboiteux 2009-06-26 07:41:35 UTC
Created attachment 22100 [details]
acpidump log

hope it's in the right format
Comment 5 fboiteux 2009-06-26 07:43:42 UTC
Created attachment 22101 [details]
dmesg output for Debian's 2.6.29-2-686 kernel, with acpi_enforce_resources=strict in command line
Comment 6 ykzhao 2009-06-26 08:34:50 UTC
Thanks for your info.
   
It seems that this is related with the following commit:
    >commit f9ca058430333c9a24c5ca926aa445125f88df18
    >Author: Bob Moore <robert.moore@intel.com>
    >Date:   Thu Mar 19 09:47:16 2009 +0800
       >ACPICA: Remove obsolete acpi_os_validate_address interface

   Thanks.
Comment 7 Lin Ming 2009-06-29 01:58:25 UTC
Hi, Alan

Would you please try to revert f9ca058430333c9a24c5ca926aa445125f88df18 to see if the problem is fixed?

Thanks.
Comment 8 Alan Jenkins 2009-06-29 08:19:12 UTC
Yes.  After reverting that commit, I get the resource conflict messages again and i2c_i801 doesn't bind to the hardware.

[I have slightly different hardware to the original reporters.  I can see i2c_i801 being loaded (or not).  It's just that it didn't cause any obvious problems on my machine].
Comment 9 fboiteux 2009-06-29 14:48:00 UTC
  Hi Lin,

  I've compiled a Debian kernel source 2.6.30, reverting given git commit and
booted again, omitting the i2c_801 blacklist previously added, and yes, the
problem is fixed then :-)

  Fred.
Comment 10 Zhang Rui 2009-07-27 02:48:40 UTC
Ming, what's the status of this bug?
should we revert the patch?
or will you generate another patch to fix this problem?
Comment 11 Lin Ming 2009-07-27 03:21:10 UTC
We should revert commit f9ca058 and apply the patch at http://patchwork.kernel.org/patch/33626/

Ping Len ...
Comment 12 Zhang Rui 2009-07-27 05:15:16 UTC
close this bug as patch is already available.
Comment 13 Rafael J. Wysocki 2009-08-19 23:20:27 UTC
Patch : http://patchwork.kernel.org/patch/33626/
Handled-By : Lin Ming <ming.m.lin@intel.com>
Comment 14 Rafael J. Wysocki 2009-08-21 16:41:37 UTC
On Friday 21 August 2009, Alan Jenkins wrote:
> On 8/19/09, Rafael J. Wysocki <rjw@sisk.pl> wrote:
> > This message has been generated automatically as a part of a report
> > of regressions introduced between 2.6.29 and 2.6.30.
> >
> > The following bug entry is on the current list of known regressions
> > introduced between 2.6.29 and 2.6.30.  Please verify if it still should
> > be listed and let me know (either way).
> >
> >
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=13620
> > Subject             : acpi_enforce_resources broken - conflicting i2c
> module loaded on
> > some EeePCs
> > Submitter   : Alan Jenkins <alan-jenkins@tuffmail.co.uk>
> > Date                : 2009-06-25 08:31 (56 days old)
> > References  :
> >
> <http://lists.alioth.debian.org/pipermail/debian-eeepc-devel/2009-June/002316.html>
> > Handled-By  : Lin Ming <ming.m.lin@intel.com>
> > Patch               : http://patchwork.kernel.org/patch/33626/
> 
> This must have been fixed in -rc6, because someone just complained
> about it working again :-).
> <http://article.gmane.org/gmane.linux.acpi.devel/40999/>
> 
> I confirmed this on my own EeePC; i2c-i801 is now correctly denied
> access to the IO resources claimed by ACPI.  Please remove this
> regression from your list.

Note You need to log in before you can comment on or make changes to this bug.